--- a/advisory.html
+++ b/advisory.html
@@ -198,7 +198,7 @@ tr:hover {
 
 
  <tr><td>Prof. Vincenzo Piuri, University of Milano, Italy</td></tr>
- <tr><td>Prof. S N Singh, Indian Institute of Technology, Kanpur, India</td></tr>
+ <tr><td>Prof. S N Singh, IIT, Kanpur, India</td></tr>
  <tr><td>Prof. J. Ramkumar, IIT Kanpur, India</td></tr>
  <tr><td>Prof. R. K. Nagaria, MNNIT Allahabad, India</td></tr>
  <tr><td>Prof. H. K. Sardana, Chief Scientist, CSIR-CSIO, India</td></tr>
