--- a/advisory.html
+++ b/advisory.html
@@ -203,13 +203,13 @@ tr:hover {
  <tr><td>Prof. R. K. Nagaria, MNNIT Allahabad, India</td></tr>
  <tr><td>Prof. H. K. Sardana, Chief Scientist, CSIR-CSIO, India</td></tr>
 <tr><td> Prof. Mohd. Jawaid Siddiqui, AMU, Aligarh, India</td></tr>
+<tr><td>  Prof. Ekram Khan, AMU, Aligarh</td></tr>		  
 <tr><td>Prof. Mohd. Shah Alam, Imam Muhammad Ibm Saud Islamic University, Saudi Arabia</td></tr>
 <tr><td>Prof. Binod Kumar Kanauji, JNU, India</td></tr>
-<tr><td>Prof. Ragvendra Chaudhary, IIT Dhanbad</td></tr>
+<tr><td>Prof. Raghvendra Chaudhary, IIT Dhanbad</td></tr>
 <tr><td> Prof. Xiao-Zhi Gao, University of Eastern Finland, Finland</td></tr>
 <tr><td> Prof. Sudarshan Tiwari, MNNIT Allahabad</td></tr>
 <tr><td> Prof. Suman Lata Tripathi, LPU, India</td></tr>
-<tr><td>  Prof. Ekram Khan, AMU, Aligarh</td></tr>
 
  <tr><td>Dr. Ravinder Singh, Governance of London, UK</td></tr>
  <tr><td>Dr. Satish Kumar, Sr. Principal Scientist, CSIR-CSIO, India</td></tr>
