--- a/advisory.html
+++ b/advisory.html
@@ -221,9 +221,13 @@ tr:hover {
  <tr><td>  Dr. Arun Prakash, MNNIT Allahabad</td></tr>
  <tr><td>  Dr. Unmat Pandit, Symbiosis Centre for Medical Image Analysis, Pune, India</td></tr>
  <tr><td>  Dr. Basant Kumar, MNNIT Allahabad</td></tr>
- 
+ <tr><td>Dr. Sanjeevikumar Padmanabhan, CTIF Global Capsule (CGC) Laboratory, Department of Business Development and Technology, Aarhus University, Birk Centerpark 15, 7400 Herning, Denmark</td></tr>
+<tr><td> Dr. Umashankar Subramaniam, Associate  Professor, Renewable Energy Lab, College of Engineering, Prince Sultan University, Riyadh, Saudi Arabia</td></tr>
+<tr><td>Dr. Rajesh Verma, Professor, Dept. of Electrical Engineering, King Khalid University,abha, Al Madinah, Saudi Arabia</td></tr>
+
 <tr><td>  Mr. Sandeep Singhai, Principal Scientist, CSIR-CSIO, Chandigarh</td></tr>
 <tr><td> Mr. Ashish Gaurav, Principal Scientist, CSIR-CSIO, Chandigarh</td></tr>
+
 
 
  
