--- a/advisory.html
+++ b/advisory.html
@@ -221,8 +221,8 @@ tr:hover {
  <tr><td>  Dr. Arun Prakash, MNNIT Allahabad</td></tr>
  <tr><td>  Dr. Unmat Pandit, Symbiosis Centre for Medical Image Analysis, Pune, India</td></tr>
  <tr><td>  Dr. Basant Kumar, MNNIT Allahabad</td></tr>
- <tr><td>Dr. Sanjeevikumar Padmanabhan, CTIF Global Capsule (CGC) Laboratory, Aarhus University, Denmark</td></tr>
-<tr><td> Dr. Umashankar Subramaniam, Renewable Energy Lab, College of Engineering, Prince Sultan University, Saudi Arabia</td></tr>
+ <tr><td>Dr. Sanjeevikumar Padmanabhan, Aarhus University, Denmark</td></tr>
+<tr><td> Dr. Umashankar Subramaniam, Prince Sultan University, Saudi Arabia</td></tr>
 <tr><td>Dr. Rajesh Verma, King Khalid University, Saudi Arabia</td></tr>
 
 <tr><td>  Mr. Sandeep Singhai, Principal Scientist, CSIR-CSIO, Chandigarh</td></tr>
