--- a/advisory.html
+++ b/advisory.html
@@ -114,7 +114,7 @@ tr:hover {
               <td>France</td>
             </tr>
             <tr>
-              <td>Prof. S N Singh</td>
+              <td>Prof. S. N. Singh</td>
               <td rowspan="2">IIT Kanpur</td>
               <td rowspan="16">India</td>
             </tr>
@@ -198,33 +198,32 @@ tr:hover {
 
 
  <tr><td>Prof. Vincenzo Piuri, University of Milano, Italy</td></tr>
- <tr><td>Prof. S N Singh, IIT, Kanpur, India</td></tr>
+ <tr><td>Prof. S. N. Singh, IIT Kanpur, India</td></tr>
  <tr><td>Prof. J. Ramkumar, IIT Kanpur, India</td></tr>
  <tr><td>Prof. R. K. Nagaria, MNNIT Allahabad, India</td></tr>
  <tr><td>Prof. H. K. Sardana, Chief Scientist, CSIR-CSIO, India</td></tr>
-<tr><td> Prof. Mohd. Jawaid Siddiqui, AMU, Aligarh, India</td></tr>
-<tr><td>  Prof. Ekram Khan, AMU, Aligarh</td></tr>		  
+<tr><td>Prof. Mohd. Jawaid Siddiqui, AMU Aligarh, India</td></tr>
+<tr><td>Prof. Ekram Khan, AMU Aligarh, India</td></tr>		  
 <tr><td>Prof. Mohd. Shah Alam, Imam Muhammad Ibm Saud Islamic University, Saudi Arabia</td></tr>
-<tr><td>Prof. Binod Kumar Kanauji, JNU, India</td></tr>
-<tr><td>Prof. Raghvendra Chaudhary, IIT Dhanbad</td></tr>
+<tr><td>Prof. Binod Kumar Kanaujia, JNU, New Delhi, India</td></tr>
+<tr><td>Prof. Raghvendra Chaudhary, IIT Dhanbad, India</td></tr>
 <tr><td> Prof. Xiao-Zhi Gao, University of Eastern Finland, Finland</td></tr>
 <tr><td> Prof. Sudarshan Tiwari, MNNIT Allahabad</td></tr>
-<tr><td> Prof. Suman Lata Tripathi, LPU, India</td></tr>
+<tr><td> Prof. Suman Lata Tripathi, LPU, Punjab, India</td></tr>
 
  <tr><td>Dr. Ravinder Singh, Governance of London, UK</td></tr>
  <tr><td>Dr. Satish Kumar, Sr. Principal Scientist, CSIR-CSIO, India</td></tr>
  <tr><td>Dr. Keshav Singh, National Sun Yet-sen University, Taiwan</td></tr>
 <tr><td>Dr. Mohd. A. Maktoomi, The University of Scranton, USA</td></tr>
   <tr><td>Dr. Shamimul Qamar, King Khalid University, Saudi Arabia</td></tr>
-<tr><td> Dr. Bhushan Borotikar, LaTIM, France</td></tr>
+<tr><td> Dr. Bhushan Borotikar, Symbiosis Centre for Medical Image Analysis, Pune, India</td></tr>
  <tr><td>  Dr. Joel Rodrigues, Federal University Piaui, Brazil</td></tr>
  <tr><td>  Dr. Arun Prakash, MNNIT Allahabad</td></tr>
- <tr><td>  Dr. Unmat Pandit, Symbiosis Centre for Medical Image Analysis, Pune, India</td></tr>
+ <tr><td>  Prof. Unnat P. Pandit, JNU, New Delhi, India</td></tr>
  <tr><td>  Dr. Basant Kumar, MNNIT Allahabad</td></tr>
  <tr><td>Dr. Sanjeevikumar Padmanabhan, Aarhus University, Denmark</td></tr>
 <tr><td> Dr. Umashankar Subramaniam, Prince Sultan University, Saudi Arabia</td></tr>
 <tr><td>Dr. Rajesh Verma, King Khalid University, Saudi Arabia</td></tr>
-
 <tr><td>  Mr. Sandeep Singhai, Principal Scientist, CSIR-CSIO, Chandigarh</td></tr>
 <tr><td> Mr. Ashish Gaurav, Principal Scientist, CSIR-CSIO, Chandigarh</td></tr>
 
