--- a/advisory.html
+++ b/advisory.html
@@ -218,7 +218,7 @@ tr:hover {
   <tr><td>Dr. Shamimul Qamar, King Khalid University, Saudi Arabia</td></tr>
 <tr><td> Dr. Bhushan Borotikar, Symbiosis Centre for Medical Image Analysis, Pune, India</td></tr>
  <tr><td>  Dr. Joel Rodrigues, Federal University Piaui, Brazil</td></tr>
- <tr><td>  Dr. Arun Prakash, MNNIT Allahabad</td></tr>
+ <tr><td>  Dr. Arun Prakash, MNNIT Allahabad, India</td></tr>
  <tr><td>  Prof. Unnat P. Pandit, JNU, New Delhi, India</td></tr>
  <tr><td>  Dr. Basant Kumar, MNNIT Allahabad</td></tr>
  <tr><td>Dr. Sanjeevikumar Padmanabhan, Aarhus University, Denmark</td></tr>
