--- a/advisory.html
+++ b/advisory.html
@@ -220,12 +220,12 @@ tr:hover {
  <tr><td>  Dr. Joel Rodrigues, Federal University Piaui, Brazil</td></tr>
  <tr><td>  Dr. Arun Prakash, MNNIT Allahabad, India</td></tr>
  <tr><td>  Prof. Unnat P. Pandit, JNU, New Delhi, India</td></tr>
- <tr><td>  Dr. Basant Kumar, MNNIT Allahabad</td></tr>
+ <tr><td>  Dr. Basant Kumar, MNNIT Allahabad, India</td></tr>
  <tr><td>Dr. Sanjeevikumar Padmanabhan, Aarhus University, Denmark</td></tr>
 <tr><td> Dr. Umashankar Subramaniam, Prince Sultan University, Saudi Arabia</td></tr>
 <tr><td>Dr. Rajesh Verma, King Khalid University, Saudi Arabia</td></tr>
-<tr><td>  Mr. Sandeep Singhai, Principal Scientist, CSIR-CSIO, Chandigarh</td></tr>
-<tr><td> Mr. Ashish Gaurav, Principal Scientist, CSIR-CSIO, Chandigarh</td></tr>
+<tr><td>  Mr. Sandeep Singhai, Principal Scientist, CSIR-CSIO, Chandigarh, India</td></tr>
+<tr><td> Mr. Ashish Gaurav, Principal Scientist, CSIR-CSIO, Chandigarh, India</td></tr>
 
 
 
