--- a/advisory.html
+++ b/advisory.html
@@ -208,7 +208,7 @@ tr:hover {
 <tr><td>Prof. Binod Kumar Kanaujia, JNU, New Delhi, India</td></tr>
 <tr><td>Prof. Raghvendra Chaudhary, IIT Dhanbad, India</td></tr>
 <tr><td> Prof. Xiao-Zhi Gao, University of Eastern Finland, Finland</td></tr>
-<tr><td> Prof. Sudarshan Tiwari, MNNIT Allahabad</td></tr>
+<tr><td> Prof. Sudarshan Tiwari, MNNIT Allahabad, India</td></tr>
 <tr><td> Prof. Suman Lata Tripathi, LPU, Punjab, India</td></tr>
 
  <tr><td>Dr. Ravinder Singh, Governance of London, UK</td></tr>
